--- a/isthecomputeron.html
+++ b/isthecomputeron.html
@@ -22,7 +22,7 @@
 
 		  </div>
 
-			 <a href="https://www.youtube.com/watch?v=ODKTITUPusM"  button class="footer"> please click here to go back. Seriously, I can't believe some people </a>
+			 <a href="https://wangkevin20.github.io/final/text.html"  button class="footer"> please click here to go back. Seriously, I can't believe some people </a>
 
 
 
